@@ -1,8 +1,0 @@
-<html data-namespace-typo3-fluid="true" xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers">
-
-
-	<f:be.container pageTitle="{f:translate(key: 'title')}" enableClickMenu="false" loadExtJsTheme="false" loadJQuery="true">
-				<f:render section="main" />
-	</f:be.container>
-
-</html>
